[package]
name = "nitro-enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
err-derive = "0.2"
nix = { version = "0.20.2" }
raw-fd = { path = "../raw-fd" }
serde_json = { version = "1.0", default-features = false }

